# 2d-game-engine

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: BaseComponent.h  CollisionSystem.cpp  CollisionSystem.h  Component.h  Components.cpp  Components.h  DrawableEntity.cpp  DrawableEntity.h  Game.cpp  Game.h  GameContext.cpp  GameContext.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  ScriptManager.cpp  ScriptManager.h  main.cpp
src/Components/: BoxColliderComponent.cpp  BoxColliderComponent.h  RenderComponent.cpp  RenderComponent.h  TransformComponent.cpp  TransformComponent.h
src/GameObjects/: Obstacle.cpp  Obstacle.h  Player.cpp  Player.h
src/Scripts/: PlayerController.cpp
